radix-transactions/tests/assets/manifest_lexer_error_unexpected_char_3.diag
error: unexpected character '7', expected '>'
  |
1 | x=7
  |   ^ unexpected character
  |